20140604 - v0.6.0
  Add (optional) script to clean tmp dirs
20140120 - v0.5.1
  Fix for account and common::users declaring /root/.ssh
20140120 - v0.5.0
  Allow setting root's ssh key (public and private)
20140120 - v0.4.0
  Remove dirname function (conflicts with stdlib)
  Add puppet 3.4 to travis
20140113 - v0.4.0
  Remove setting the root device params
v0.3.1
  Lint fixes
v0.3.0:
  Add root FS mount option
  Add option to set root mail alias
v0.2.0:
  Secure RH init scripts
  Add option for beaver log shipping
  Add ability to set root PW and create an "ohshit" user
  Cleanup unused users from default install
v0.1.11:
  Add default bash PS1 prompt
v0.1.10:
  Add bash-completion package
v0.1.9:
  Initial public release