@@ -1,0 +1,13 @@
+class common::params {
+
+  $logsagent        = undef
+  $root_mail        = undef
+  $clean_tmp        = false
+  $clean_age        = '+30'
+  $clean_paths      = '/tmp /var/tmp'
+  $absent_packages  = undef
+  $install_packages = undef
+  $stopped_services = undef
+  $absent_files     = undef
+
+}
