@@ -1,3 +1,5 @@
+  Remove common::lint
+  Remove hard-coded package, service, and file install/remove
 20140604 - v0.6.0
   Add (optional) script to clean tmp dirs
 20140120 - v0.5.1
